# kube-saver

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  imporvment  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
benchmarks/: __init__.py
docs/: architecture.md  cli-reference.md  comparison.md  configuration.md  getting-started.md  safety.md  self-contained.md  troubleshooting.md
docs/screenshots/: report.html
docs/screenshots/notifications/: daily-summary-20260722-204710-034732.md  spike-alert-20260722-204710-034941.md
docs/screenshots/pr-plan/: README.md  apply-patches.sh  review.txt  summary.md
examples/: demo.py
scripts/: capture_cli.sh  capture_tui.py  validate_phase2.py
src/kube_saver/: __init__.py  cli.py  config.py  server.py  version.py
src/kube_saver/analyzers/: __init__.py  alerts.py  cost_waste.py  health.py  resource_waste.py
src/kube_saver/collectors/: __init__.py  ebpf.py  ebpf_safety.py  k8s_client.py  metrics.py  runtime.py  runtime_models.py
src/kube_saver/exporters/: __init__.py  helm_exporter.py  json_output.py  notifier.py  pr_generator.py  prometheus.py  report_generator.py  yaml_exporter.py
src/kube_saver/models/: __init__.py  core.py
src/kube_saver/pricing/: __init__.py  display.py  engine.py
src/kube_saver/recommenders/: __init__.py  engine.py
src/kube_saver/tui/: __init__.py  app.py  data.py
tests/: __init__.py  test_currency.py  test_k8s_client.py  test_models.py  test_phase2.py  test_phase4_runtime.py  test_phase5_exporters.py  test_phase5_integrations.py  test_phase5_json_server.py  test_phase5_outputs.py  test_phase6_e2e.py  test_phase6_integration.py  test_phase6_tui_async.py  test_pricing.py  test_unit_coverage.py
